# ravi

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  lua-config.cmake.in  ravi-config.cmake.in  ravi-config.h.in  ravi-env.bat.in  ravi-env.linux.sh.in  ravi-env.osx.sh.in
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
aot-examples/: README.md  aot.lua  gaussian2_aot.lua  gaussian2_lib.c  gaussian2_lib.lua  matrixmul_aot.lua  matrixmul_lib.c  matrixmul_lib.lua  sieve_aot.lua  sieve_aot.sh  sieve_lib.c  sieve_lib.lua
build-utils/: README.rst  buildllvm10.sh  cmake-32bit-llvm-shared.bat  cmake-32bit-llvm.bat  cmake-32bit-llvmd.bat  cmake-32bit-nojit.bat  cmake-64bit-llvm-debug.bat  cmake-64bit-llvm.bat  cmake-64bit-llvm8.bat  cmake-64bit-llvm9d.bat  cmake-64bit-llvm9r.bat  cmake-64bit-nano-debug.bat  cmake-64bit-nano-release.bat  cmake-64bit-nojit-assertions-asmvm.bat  cmake-64bit-nojit-assertions.bat  cmake-64bit-nojit.bat  cmake-64bit-omrjit-debug.bat  cmake-64bit-osx-xcode-llvm-debug.sh  cmake-64bit-osx-xcode-nojit-release.sh  cmake-64bit-unix-gcc-release.sh  cmake-64bit-unix-llvm-debug.sh  cmake-64bit-unix-llvm-release.sh  cmake-64bit-unix-nojit-asmvm.sh  cmake-64bit-unix-nojit-debug.sh  cmake-64bit-unix-nojit-release.sh  cmake-64bit-unix-omrjit-release.sh
clang-output/: README.rst  bitwise.c  inline_getstr.c  inline_getstr.ll  lua_for_num.c  lua_for_num.ll  lua_hdr.h  lua_if_else.c  lua_if_else.ll  lua_op_call.c  lua_op_call.ll  lua_op_forloop.c  lua_op_forloop.ll  lua_op_forprep.c  lua_op_forprep.ll  lua_op_loadk_return.c  lua_op_loadk_return.ll  lua_op_loadk_return_ravi.ll  lua_savedpc.c  lua_savedpc.ll  lua_upval.c  lua_upval.ll  runclang.bat  tab.c  tab.ll
cmake/: FindGCCJIT.cmake  FindMIRJIT.cmake  FindNanoJIT.cmake  FindOMRJIT.cmake  FindRaviComp.cmake  mir.cmake
dmr_c/: README.md
docs/: ANoFrillsIntroToLua51VMInstructions-updated.docx  lua_bytecode_reference.rst  lua_internals_notes.rst
include/: lapi.h  lauxlib.h  lcoco.h  lcode.h  ldebug.h  ldo.h  lfunc.h  lgc.h  llex.h  llimits.h  lobject.h  lopcodes.h  lparser.h  lstate.h  ltable.h  ltests.h  ltm.h  lua.h  luaconf.h  lualib.h  lvm.h  ravi_alloc.h  ravi_arch.h  ravi_ast.h  ravi_def.h  ravi_fnv_hash.h  ravi_gccjit.h  ravi_hash_table.h  ravi_int_set.h  ravi_jit.h  ravi_jitshared.h  ravi_llvm.h  ravi_llvmcodegen.h  ravi_membuf.h  ravi_mirjit.h  ravi_nanojit.h  ravi_omrjit.h  ravi_profile.h  ravi_set.h  ravijit.h  (+1 more)
llvmbinding/: README.rst  basics.lua  fib.lua  helloworld.lua
lua-5.3.0-tests/: README.rst  all.lua  api.lua  attrib.lua  bitwise.lua  bug.lua  calls.lua  closure.lua  code.lua  constructs.lua  coroutine.lua  db.lua  errors.lua  events.lua  files.lua  gc.lua  literals.lua  locals.lua  main.lua  math.lua  nextvar.lua  pm.lua  run_tests.sh  sort.lua  strings.lua  tpack.lua  vararg.lua
lua-5.3.1-tests/: README.rst  all.lua  attrib.lua  calls.lua  constructs.lua  coroutine.lua  files.lua  gc.lua  literals.lua  math.lua  nextvar.lua  pm.lua
lua-tests/: README.rst  all.lua  api.lua  attrib.lua  calls.lua  closure.lua  code.lua  constructs.lua  coroutine.lua  db.lua  errors.lua  events.lua  files.lua  gc.lua  goto.lua  literals.lua  main.lua  math.lua  pm.lua  run_travis_tests.sh  sort.lua  strings.lua  tpack.lua  verybig.lua
mir/: CMakeLists.txt  README.md  mir.c  mir.h
mir/c2mir/: c2mir.c
mir/c2mir/x86_64/: mirc-x86_64-win.h  mirc_x86_64_win.h
patches/: README.md  defer_statement_for_Lua_5_3.patch  defer_statement_for_Lua_5_4.patch  defer_statement_patch_for_Lua_5_4_3.patch
ravi-tests/: README.rst  ast_upvaltest.expected  ast_upvaltest.lua  basics.lua  binarytrees.lua  bitwise_tests.lua  bug.lua  debugger_test.lua  dmrc_getsymbols.lua  dmrc_testllvm.lua  egor_test_typed.lua  fannkuchen.lua  fannkuchen.ravi  fornum_test1.ll  fornum_test1.lua  fornum_test2.ll  fornum_test2.lua  fornum_test2.ravi  fornum_test3.ll  fornum_test3.lua  gaussian2.lua  gaussian4.lua  mandel.lua  mandel.ravi  mandel1.lua  mandel1.ravi  matmul1.lua  matmul1.ravi  matmul1_ravi.lua  matmul2.lua  pcall.lua  pisum.lua  pisum.ravi  ravi_errors.ravi  ravi_test_ast.expected  ravi_test_ast.lua  ravi_test_ast2.expected  ravi_test_ast2.lua  ravi_test_lin.expected  ravi_test_lin.lua  (+6 more)
ravicomp/: .clang-format  CMakeLists.txt  LICENSE  README.md
ravicomp/include/: ravi_api.h  ravi_compiler.h
ravicomp/src/: README.md  allocate.c  allocate.h  ast_lower.c  ast_printer.c  ast_printer_n.c  ast_simplify.c  ast_walker.c  bitset.c  bitset.h  cfg.c  cfg.h  codegen.c  codegen.h  common.h  dataflow_framework.c  dataflow_framework.h  df_liveness.c  dominator.c  dominator.h  fnv_hash.c  fnv_hash.h  graph.c  graph.h  hash_table.c  hash_table.h  lexer.c  linearizer.c  linearizer.h  membuf.c  membuf.h  opt_unusedcode.c  optimizer.h  parser.c  parser.h  ptrlist.c  ptrlist.h  ravi_binding.c  set.c  set.h  (+1 more)
ravicomp/src/chibicc/: .clang-format  README.md  chibicc.h  chibicc_hashmap.c  chibicc_parse.c  chibicc_strings.c  chibicc_tokenize.c  chibicc_type.c  chibicc_unicode.c
readthedocs/: CrashCourseInLua.rst  Drawing_Lua_Stack.vsdx  Makefile  conf.py  index.rst  llvm-bindings.rst  llvm-notes.rst  llvm-tbaa.rst  lua-introduction.rst  lua-parser.rst  lua_bytecode_reference.rst  make.bat  new-ast-parser-code-gen.rst  ravi-benchmarks.rst  ravi-build-instructions.rst  ravi-compiler.rst  ravi-dmrc.rst  ravi-internals.rst  ravi-jit-compilation-hook.rst  ravi-jit-infra.rst  ravi-jit-initial.rst  ravi-jit-libgccjit.rst  ravi-jit-overview.rst  ravi-jit-status.rst  ravi-llvm-instructions.rst  ravi-lua-types.rst  ravi-luaconf-2015.pptx  ravi-mir-instructions.rst  ravi-new-parser-codegenerator.rst  ravi-omr-instructions.rst  ravi-overview.rst  ravi-reference.rst
src/: Makefile  README.rst  bit.c  lapi.c  lauxlib.c  lbaselib.c  lcoco.c  lcode.c  lcode.h  lcorolib.c  ldblib.c  ldebug.c  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  (+85 more)
vmbuilder/src/: CMakeLists.txt  buildvm.c  buildvm.h  buildvm_asm.c  buildvm_peobj.c  msvcbuild.bat  vm_x64.dasc
(+333 files in other folders)
